# navis_mpu9250_driver

./: CMakeLists.txt  package.xml
lib/mpu9250sensor/include/mpu9250sensor/: mpu9250sensor.h
lib/mpu9250sensor/src/: mpu9250sensor.cpp
params/: mpu_imu.yaml
src/: mpu9250driver.cpp  odom_tracker_node.cpp
